Revision history for Perl suite Locale::Maketext

<date here>
    * Release 1.16

    Fix for CPAN RT #40727: infinite loop in
    Locale::Maketext::Guts::_compile() when working with tainted values

2010−06−22
    * Release 1.15 (included in perl 5.13.3; not released separately)

    Locale::Maketext guts have been merged back into the main module

    External cache support

2009-11-20
    * Release 1.14 (included in perl 5.11.2; not released separately)

    In Locale::Maketext, avoid using defined @array and defined %hash.

    Convert the odd Locale::Maketext test out from Test to Test::More.

2009-06-23  Adriano Ferreira
    * Development release 1.13_82

    One more recipe: on [numf,...] with decimal precision

2009-06-23  Adriano Ferreira
    * Development release 1.13_81

    Change a few straggling 'DEBUG and print' to 'DEBUG and warn' (thanks Dan Muey)

    A start of a cookbook.

2009-06-23  Adriano Ferreira
    * Development release 1.13_80

    Fixes CPAN RT #25877 (thanks imacat)

    Add a test for failure_handler_auto()

2008-05-28  Adriano Ferreira
    * Release 1.13

    New maintainer. No noteworthy changes.

    When debugging is turned on, "DEBUG and warn" is now
    used instead of "DEBUG and print". It makes web applications
    happier. CPAN RT #36238
	
2007-11-17
    * Release 1.12

    Many doc changes from RT.

    Silenced some "used only once" warnings under Perl 5.10.

    $@ is now localized in case it gets interpolated.  This was added
    a while ago, but now there's a test for it, too.

    Added warnings and strict to tests.

    Cleaning up some Perl::Critic gripes.

2007-05-07  Andy Lester
    * Release 1.11_01

    Fixed perlbug #33938
    http://rt.perl.org/rt3//Public/Bug/Display.html?id=3393

    Started cleaning up source per Perl::Critic.


2005-11-10  Andy Lester
    * Release 1.10:

    New maintainer.  No changes at all.  Bumped up the version number